ACLOCAL_AMFLAGS = -I m4
ossieName = DocumentTypeDefinition

thistooldir = $(prefix)/dom/xml/dtd
dist_thistool_DATA =                    \
    deviceconfiguration.dtd             \
    devicepkg.dtd                       \
    domainmanagerconfiguration.dtd      \
    profile.dtd                         \
    properties.dtd                      \
    softpkg.dtd                         \
    softwareassembly.dtd                \
    softwarecomponent.dtd

