ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = -Wall -I../ossie/include -I../ossie/include/ossie -I../ossie/parser -I../standardInterfaces/include

bin_PROGRAMS = nodeBooter

nodeBooter_SOURCES = nodebooter.cpp

LDADD = ../ossie/framework/libossiecf.la ../ossie/parser/libossieparser.la ../ossie/idl/cpp/libossieidl.la
